# omicsx

./: .gitattributes  .gitignore  ADVANCED_IMPLEMENTATION_SUMMARY.md  ALIGNMENT_ISSUES_VERIFICATION.md  CHANGELOG.md  CIGAR_GPU_OPTIMIZATIONS.md  CODE_OF_CONDUCT.md  COMPLETION_REPORT.md  COMPREHENSIVE_BUG_AUDIT.md  CONTRIBUTING.md  CRITICAL_BUG_FIXES_REPORT.md  CRITICAL_FAULTS_AUDIT_REPORT.md  CRITICAL_FIXES_VALIDATION_REPORT.md  CUDA_STATUS.md  Cargo.toml  DEPLOYMENT_READY_CHECKLIST.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  ENHANCEMENT_ROADMAP.md  FEATURES.md  GPU.md  GPU_EXECUTION_SUMMARY.md  GPU_EXECUTION_TEST_REPORT.md  GPU_INTEGRATION_GUIDE.md  GPU_JIT_COMPILER_ENHANCED.md  GPU_KERNEL_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LIMITATION_REMOVAL_PROGRESS.md  MASTER_BUG_REGISTRY.md  PHASE1_IMPLEMENTATION.md  PHASE3_ENHANCEMENT_COMPLETION.md  PHASE3_ENHANCEMENT_PLAN.md  PHASE3_FINAL_COMPLETION.md  PHASE4_GPU_PLAN.md  PHYLOGENETIC_TREE_OPTIMIZATIONS.md  PUSH_SUMMARY.md  README.md  SECURITY.md  SESSION_SUMMARY.md  (+12 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  RELEASE_CHECKLIST.md  copilot-instructions.md  dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benches/: alignment_benchmarks.rs  gpu_benchmarks.rs
examples/: bam_format.rs  basic_alignment.rs  distributed_alignment.rs  gpu_acceleration.rs  gpu_execution_test.rs  multiformat_hmm_parser.rs  neon_alignment.rs  performance_validation.rs  sam_format_output.rs  st_jude_integration.rs
src/: error.rs  lib.rs
src/alignment/: bam.rs  batch.rs  cigar_gen.rs  cuda_device_context.rs  cuda_kernels.rs  cuda_kernels_rtc.rs  cuda_runtime.rs  gpu_dispatcher.rs  gpu_executor.rs  gpu_halo_buffer.rs  gpu_kernels.rs  gpu_memory.rs  hmmer3_parser.rs  kernel_compiler.rs  kernel_launcher.rs  mod.rs  profile_dp.rs  simd_viterbi.rs  smith_waterman_cuda.rs  viterbi_cuda.cu
src/alignment/kernel/: avx2.rs  banded.rs  cuda.rs  hip.rs  hmm_simd.rs  mod.rs  neon.rs  scalar.rs  striped_simd.rs  vulkan.rs
src/futures/: distributed.rs  formats.rs  gpu.rs  gpu_jit_compiler.rs  hmm.rs  hmmer3_full_parser.rs  matrices.rs  mod.rs  msa.rs  msa_profile_alignment.rs  pfam.rs  phylogeny.rs  phylogeny_likelihood.rs  phylogeny_parsimony.rs  st_jude_bridge.rs  tree_refinement.rs
src/protein/: mod.rs
src/scoring/: mod.rs
