[package]
name = "omics-simd"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Omnics-X: SIMD-accelerated sequence alignment and bioinformatics analysis"
license = "MIT"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
rayon = "1.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "alignment_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
