[package]
name = "omicsx"
version = "1.0.2"
edition = "2021"
authors = ["Raghav Maheshwari <raghavmkota@gmail.com>"]
description = "omicsx: SIMD-accelerated sequence alignment and bioinformatics analysis for petabyte-scale genomic data"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/techusic/omicsx"
homepage = "https://github.com/techusic/omicsx"
documentation = "https://docs.rs/omicsx"
keywords = ["bioinformatics", "simd", "alignment", "genomics", "cuda"]
categories = ["algorithms", "data-structures", "science"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
rayon = "1.7"
log = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
flate2 = "1.0"  # BGZF compression for BAM files
# GPU acceleration (optional - only enabled with features)
# Uses cudarc with explicit CUDA version specification
# For CUDA 13.x systems: cargo build --features cuda-13100
# For CUDA 12.x systems: cargo build --features cuda-12050
# Auto-detection is provided by build.rs
cudarc = { version = "0.12", optional = true, features = ["std"] }
regex = "1.12.3"
# hip-sys = { version = "0.1", optional = true }
# ash = { version = "0.37", optional = true }
# gpu-alloc = { version = "0.6", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "alignment_benchmarks"
harness = false

[features]
default = ["simd"]
simd = []
# CUDA support - automatically selects the highest supported version
# For older systems, specify explicit version: cargo build --features cuda,cuda-12050
cuda = ["cudarc", "cuda-13100"]
cuda-full = ["cuda"]
# Explicit CUDA version features (for systems with older CUDA)
# cudarc 0.12 supports: 12000, 12010, 12020, 12030, 12040, 12050, 13000, 13010, 13100
cuda-13100 = []
cuda-13010 = []
cuda-13000 = []
cuda-12050 = []
cuda-12040 = []
cuda-12030 = []
cuda-12020 = []
cuda-12010 = []
cuda-12000 = []
cuda-11080 = []
cuda-11070 = []
cuda-11060 = []
cuda-11050 = []
cuda-11040 = []
hip = []
vulkan = []
all-gpu = ["cuda", "hip", "vulkan"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
